# haskell-testing

./: README.md  init.sh
tests/: CHANGELOG.md  HowTo.md  run.sh  tests.cabal  tests.hs
